--- a/server.ui
+++ b/server.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>855</width>
-    <height>636</height>
+    <height>581</height>
    </rect>
   </property>
   <property name="font">
@@ -1139,13 +1139,13 @@
     </item>
    </layout>
   </widget>
-  <widget class="QTextBrowser" name="List">
+  <widget class="QTextBrowser" name="output">
    <property name="geometry">
     <rect>
      <x>40</x>
      <y>250</y>
      <width>351</width>
-     <height>221</height>
+     <height>311</height>
     </rect>
    </property>
   </widget>
